# phab-utils

./: .gitignore  README.md  changelog.md  disabled.gitattributes  mypy.ini  phab-utils.sublime-project  setup.cfg
data/: systems-528n.pkl  tess2019006130736-s0007-0000000266744225-0131-s_lc.fits
data/merge-pickles/: random-3x5-1.pkl  random-3x5-2.pkl
documentation/: 401.html  403.html  404.html  index.md  style.css
documentation/_templates/: custom.css  index.html.jinja2  module.html.jinja2
documentation/databases/: index.md
documentation/files/: index.md
documentation/tasks/: index.md
documentation/utility/: index.md
documentation/utility/logs/: index.md
documentation/utility/strings/: index.md
documentation/utils/datasets/: index.md
documentation/utils/logs/: index.md
src/phab/tasks/: __init__.py  reconfirming_stellar_parameters.py
src/phab/tests/: databases.py  datasets.py  files.py  math.py  strings.py
src/phab/utils/: __init__.py  _version.py
src/phab/utils/databases/: __init__.py  lightcurves.py  simbad.py  tap.py
src/phab/utils/datasets/: __init__.py  pandas.py
src/phab/utils/files/: __init__.py  file.py  pickle.py
src/phab/utils/logs/: __init__.py  log.py
src/phab/utils/math/: __init__.py  statistics.py
src/phab/utils/strings/: __init__.py  conversion.py  extraction.py
src/uio/: __init__.py  _version.py
src/uio/_tasks/: reconfirming_stellar_parameters.py
src/uio/databases/: __init__.py  simbad.py  tap.py
src/uio/files/: __init__.py  pickle.py
src/uio/tasks/: reconfirming_stellar_parameters.py
src/uio/tests/: __init__.py  databases.py  datasets.py  files.py  math.py  strings.py
src/uio/utility/: __init__.py
src/uio/utility/databases/: __init__.py  lightcurves.py  simbad.py  tap.py
src/uio/utility/datasets/: __init__.py  pandas.py
src/uio/utility/files/: __init__.py  pickle.py
src/uio/utility/logs/: __init__.py  log.py
src/uio/utility/math/: __init__.py  statistics.py
src/uio/utility/strings/: __init__.py  conversion.py  extraction.py
wiki/: index.md
wiki/manuals/: altaipony.md  helios.md  nris.md  rh15d.md
wiki/manuals/helios/: FastChem.patch  helios.md
wiki/manuals/tunneling-jupyter/: tunneling-jupyter.md
