[metadata]
name = phab-utils
#version = attr: %(name)s.version.__version__
# fails on building a wheel with `No module named 'phab'`, probably because `phab` is just a namespace now
#version = attr: phab.utils._version.__version__
# so let's just hardcode/duplicate it then
version = 0.8.0
author = retif
description = PHAB utilities for data processing
long_description = file: README.md
long_description_content_type = text/markdown
keywords = tap, adql, astronomy, astrophysics, cosmology, science
url = https://github.com/retifrav/phab-utils
project_urls =
    Documentation = https://phab.decovar.dev/
    Bug Tracker = https://github.com/retifrav/phab-utils/issues
    Changelog = https://github.com/retifrav/phab-utils/blob/master/changelog.md
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Astronomy
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pyvo
    numpy
    pandas
    astropy
    astroquery
    lightkurve
    matplotlib
    tabulate

[options.packages.find]
where = src
